--- a/app/assets/stylesheets/message/message.scss
+++ b/app/assets/stylesheets/message/message.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
+  z-index: 3;
 
   ul {
     overflow: auto;
